# python-fastapi-boilerplate

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  OAUTH_IMPLEMENTATION.md  README.md  alembic.ini  demo_oauth_server.py  docker-compose.prod.yml  docker-compose.sqlite.yml  docker-compose.yml  init_db.py  main.py  pyproject.toml  requirements.txt  test_oauth.py
.claude/agents/: api-documentor.md  arcitect.md  database-pro.md  elite-code-reviewer.md  fastapi-engineer.md  python-expert-2024.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0c9b1e4a0f87_add_roles_and_permissions_tables.py  f84e336e4ffb_add_oauth_fields_to_user_model.py
app/: __init__.py  cli.py
app/api/: dependencies.py  errors.py  middleware.py
app/api/routes/: __init__.py  metrics.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  health.py  oauth.py  users.py
app/core/: __init__.py  authz.py  config.py  database.py  error_handlers.py  exceptions.py  health.py  logging.py  security.py
app/models/: __init__.py  base.py  role.py  user.py
app/repositories/: __init__.py  base.py  role.py  user.py
app/schemas/: common.py  oauth.py  pagination.py  role.py  user.py
app/services/: __init__.py  auth.py  base.py  oauth.py  user.py
app/services/oauth/: __init__.py  base.py  factory.py  google.py
docs/: DOCUMENTATION_UPDATES.md  IMPLEMENTATION_COMPLETE.md  REVIEW_2025-10-14.md  TODO.md  architecture.md  deployment.md  development.md  fastapi-best-practices.md  oauth2-consolidation-summary.md  oauth2-integration.md  onboarding.md  todo-completed.md  todo.md
docs/ai/: actions.md  architecture._old.md  architecture.md  gemini-feedback-oct1.md  improvement-plan.md  lessons.md  spec.md  todo.md
docs/ci/: setup.md
docs/features/: OAUTH_IMPLEMENTATION.md  README.md
scripts/: db-init.sh  lint.sh  migrate-oauth.sh  run-dev.sh  run-tests.sh  setup-db.sh  setup-dev-uv.sh  setup-dev.sh  verify-dev-environment.sh
tests/: conftest.py  conftest_old.py  test_auth.py  test_auth_endpoints_extended.py  test_auth_service.py  test_base_components.py  test_cli.py  test_debug_oauth.py  test_errors.py  test_health.py  test_logging.py  test_main.py  test_metrics.py  test_middleware.py  test_oauth_jwt_validation.py  test_oauth_real.py  test_oauth_real_fixed.py  test_repositories.py  test_request_logging_middleware.py  test_services.py  test_user_repository.py  test_users.py
tests/integration/: test_oauth_integration.py  test_user_service.py
tests/unit/: test_auth_endpoint_errors.py  test_database_helpers.py  test_dependencies_rbac.py  test_google_oauth_provider.py  test_oauth.py
